invalid_label_sym_sym_arg_keywords_test/invalid_label_sym_sym_arg_keywords_test_11.src
.IPPcode24
JUMPIFNEQ label1 TF@b